# FinTrace

./: .env  .gitignore  2Day POA  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TEST_INFRA.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7e18dc4ed520_add_asset_prices_table.py  8d547d47fe3e_initial_fintrace_schema.py
api/: main.py
api/routers/: portfolios.py  reports.py  transactions.py
backend/: .env.example  pyproject.toml  requirements.txt  test_startup.py
backend/api/: dependencies.py  main.py
backend/core/: config.py
backend/db/: base.py
backend/domain/: models.py  schemas.py
backend/engine/: live_pricing.py
backend/scripts/: generate_demo_artifacts.py  manual_test_analytics.py
backend/tests/: test_amfi_service.py  test_analytics_api.py  test_attribution.py  test_consolidation.py  test_copilot.py  test_golden_regression.py  test_groww_mf_ingestion.py  test_long_term_attribution.py  test_metadata_ingestion.py  test_portfolio_ops.py  test_tax_engine.py
core/: security.py
db/: session.py
demo/: sample_tax_report.json  tax_working_paper.csv
docs/: PRODUCT_AND_TECH_STRATEGY.md  TEST_READY.md  architecture.md  audit_report.md  calculation-methodology.md  supported-imports.md
domain/: models.py  schemas.py
engine/math_core/: xirr_engine.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: usePortfolioData.ts  useUpload.ts
frontend/lib/: api.ts  (+1 more)
test/: sample_ledger.csv
(+49 files in other folders)
