[project]
name = "fintrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "fastapi>=0.138.0",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyxirr>=0.10.8",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "weasyprint>=69.0",
    "yfinance>=1.4.1",
]
